updated project - fixed header covering nav content

--- a/src/app/components/template/header/header.component.css
+++ b/src/app/components/template/header/header.component.css
@@ -1,4 +1,9 @@
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
   display: flex;
   align-items: center;
 }
