--- a/src/app/components/template/nav/nav.component.css
+++ b/src/app/components/template/nav/nav.component.css
@@ -29,7 +29,7 @@
 }
 
 .content { 
-  padding: 16px;
+  padding: 80px 16px 16px 16px;
   background-color: #FFF;
 }
 
